dist_man1_MANS=

if BUILD_CSCOIND
  dist_man1_MANS+=cscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cscoin-qt.1
endif

if BUILD_CSCOIN_CLI
  dist_man1_MANS+=cscoin-cli.1
endif

if BUILD_CSCOIN_TX
  dist_man1_MANS+=cscoin-tx.1
endif

if BUILD_CSCOIN_UTIL
  dist_man1_MANS+=cscoin-util.1
endif

if ENABLE_WALLET
if BUILD_CSCOIN_WALLET
  dist_man1_MANS+=cscoin-wallet.1
endif
endif
